Moved styles from show view to main.scss, fixed index view layout bug

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -36,3 +36,12 @@ body {
 .col-xs-12 {
     padding: 0px;
 }
+
+.leader {
+    background-color: #fff;
+    border-radius: 280px;
+    width: 280px;
+    padding: 50px;
+    align-content: center;
+    margin-top: 30px;
+}
